--- a/app/src/main/res/drawable/event_detail_text.xml
+++ b/app/src/main/res/drawable/event_detail_text.xml
@@ -1,9 +1,10 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="24dp"
-        android:height="24dp"
-        android:viewportWidth="24.0"
-        android:viewportHeight="24.0">
-    <path
-        android:fillColor="#FF000000"
-        android:pathData="M22,10l-6,-6L4,4c-1.1,0 -2,0.9 -2,2v12.01c0,1.1 0.9,1.99 2,1.99l16,-0.01c1.1,0 2,-0.89 2,-1.99v-8zM15,5.5l5.5,5.5L15,11L15,5.5z"/>
+<vector android:alpha="0.78" android:height="71dp"
+    android:viewportHeight="71" android:viewportWidth="71"
+    android:width="71dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#6BBDA4"
+        android:pathData="M61.0536,69.0885H9.0349C4.6334,69.0885 1,65.5135 1,61.2941V8.7944C1,4.575 4.6334,1 9.0349,1H61.0536C65.4551,1 69.0885,4.575 69.0885,8.7944V61.2941C69.0885,65.5135 65.4551,69.0885 61.0536,69.0885Z"
+        android:strokeColor="#000000" android:strokeWidth="2"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M32.3893,56.7787H35.8937M39.3982,56.7787H35.8937M35.8937,56.7787V12.3893M14.8672,21.7345L19.5398,12.3893H52.2477L56.9203,21.7345"
+        android:strokeColor="#000000" android:strokeLineCap="round" android:strokeWidth="2"/>
 </vector>
