--- a/app/src/main/res/drawable/rv_background.xml
+++ b/app/src/main/res/drawable/rv_background.xml
@@ -1,25 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/color_white"/>
+    <solid android:color="@color/color_white" />
 
-    <stroke android:width="0dp"
-        android:color="@color/primary"
-        />
+    <stroke
+        android:width="0dp"
+        android:color="@color/primary" />
 
-    <padding android:left="1dp"
-        android:top="1dp"
-        android:right="1dp"
+    <padding
         android:bottom="1dp"
-        />
+        android:left="1dp"
+        android:right="1dp"
+        android:top="1dp" />
 
-    <margin android:left="5dp"
-        android:top="5dp"
-        android:right="5dp"
+    <margin
         android:bottom="5dp"
-    />
+        android:left="5dp"
+        android:right="5dp"
+        android:top="5dp" />
 
-    <corners android:bottomRightRadius="7dp"
-        android:bottomLeftRadius="7dp"
-        android:topLeftRadius="7dp"
-        android:topRightRadius="7dp"/>
+    <corners
+        android:bottomLeftRadius="0dp"
+        android:bottomRightRadius="0dp"
+        android:topLeftRadius="30dp"
+        android:topRightRadius="30dp" />
 </shape>
