--- a/app/src/main/res/layout/view_button_color_avatar.xml
+++ b/app/src/main/res/layout/view_button_color_avatar.xml
@@ -1,21 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/circle_white"
-    android:orientation="vertical">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ImageView
-        android:id="@+id/img_event_details_avatar_inkleuren"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:adjustViewBounds="true"
-        android:contentDescription="@string/avatar_inkleuren"
-        android:scaleType="fitXY"
-        app:srcCompat="@drawable/jongen_gamer_gezicht" />
-</LinearLayout>
+    <data>
+
+        <variable
+            name="eventViewModel"
+            type="be.hogent.faith.faith.emotionCapture.enterEventDetails.EventViewModel" />
+    </data>
+
+    <LinearLayout
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:background="@drawable/circle_white"
+        android:clickable="true"
+        android:focusable="true"
+        android:onClick="@{() -> eventViewModel.onEmotionAvatarClicked()}"
+        android:orientation="vertical"
+        android:padding="16dp">
+
+        <ImageView
+            android:id="@+id/img_event_details_avatar_inkleuren"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="8dp"
+            android:adjustViewBounds="true"
+            android:contentDescription="@string/avatar_inkleuren"
+            android:scaleType="fitXY"
+            app:srcCompat="@drawable/jongen_gamer_gezicht" />
+    </LinearLayout>
+</layout>
