--- a/app/src/main/res/layout/panel_drawing_colors.xml
+++ b/app/src/main/res/layout/panel_drawing_colors.xml
@@ -10,11 +10,14 @@
 
         <import type="android.graphics.Color" />
 
+        <import type="android.view.View" />
+
     </data>
 
     <androidx.cardview.widget.CardView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+
         app:cardCornerRadius="@dimen/panel_corner_radius">
 
         <LinearLayout
@@ -22,74 +25,183 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center_horizontal|center_vertical"
-            android:layout_margin="8dp"
             android:gravity="center"
             android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/btn_draw_setColorBlack"
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1"
-                android:adjustViewBounds="true"
-                android:background="@{((int)drawViewModel.selectedColor)==@color/black ? @drawable/background : @drawable/background_noborder}"
-                android:contentDescription="@string/choose_black"
-                android:onClick="@{() -> drawViewModel.pickColor(@color/black)}"
-                android:padding="5dp"
-                android:scaleType="centerInside"
-                android:src="@drawable/paintpot_black" />
+                   android:layout_weight="1">
 
+                <ImageView
+                    android:layout_width="15dp"
+                    android:layout_height="20dp"
+                    android:src="@drawable/ic_selected"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:visibility="@{((int)drawViewModel.selectedColor)==@color/black ? View.VISIBLE : View.GONE}"/>
+
+                <ImageView
+                    android:id="@+id/btn_draw_setColorBlack"
+                    android:layout_width="50dp"
+                    android:layout_height="0dp"
+                    android:adjustViewBounds="true"
+                    android:contentDescription="@string/choose_black"
+                    android:onClick="@{() -> drawViewModel.pickColor(@color/black)}"
+                    android:src="@drawable/paintpot_black"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1">
+
+            <ImageView
+                android:layout_width="15dp"
+                android:layout_height="20dp"
+                android:src="@drawable/ic_selected"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:visibility="@{((int)drawViewModel.selectedColor)==@color/blue ? View.VISIBLE : View.GONE}"/>
             <ImageView
                 android:id="@+id/btn_draw_setColorBlue"
-                android:layout_width="match_parent"
+                android:layout_width="50dp"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
-                android:background="@{((int)drawViewModel.selectedColor)==@color/blue ? @drawable/background : @drawable/background_noborder }"
                 android:contentDescription="@string/choose_blue"
                 android:onClick="@{() -> drawViewModel.pickColor(@color/blue)}"
-                android:padding="5dp"
-                android:scaleType="centerInside"
-                android:src="@drawable/paintpot_blue" />
+                android:src="@drawable/paintpot_blue"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1">
+
+            <ImageView
+                android:layout_width="15dp"
+                android:layout_height="20dp"
+                android:src="@drawable/ic_selected"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:visibility="@{((int)drawViewModel.selectedColor)==@color/red ? View.VISIBLE : View.GONE}"/>
             <ImageView
                 android:id="@+id/btn_draw_setColorRed"
-                android:layout_width="match_parent"
+                android:layout_width="50dp"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
-                android:background="@{((int)drawViewModel.selectedColor)==@color/red ? @drawable/background : @drawable/background_noborder }"
                 android:contentDescription="@string/choose_red"
                 android:onClick="@{() -> drawViewModel.pickColor(@color/red)}"
-                android:padding="5dp"
-                android:scaleType="centerInside"
-                android:src="@drawable/paintpot_red" />
+                android:src="@drawable/paintpot_red"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1">
+
+            <ImageView
+                android:layout_width="15dp"
+                android:layout_height="20dp"
+                android:src="@drawable/ic_selected"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:visibility="@{((int)drawViewModel.selectedColor)==@color/yellow ? View.VISIBLE : View.GONE}"/>
             <ImageView
                 android:id="@+id/btn_draw_setColorYellow"
-                android:layout_width="match_parent"
+                android:layout_width="50dp"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
-                android:background="@{((int)drawViewModel.selectedColor)==@color/yellow ? @drawable/background : @drawable/background_noborder }"
                 android:contentDescription="@string/choose_yellow"
                 android:onClick="@{() -> drawViewModel.pickColor(@color/yellow)}"
-                android:padding="5dp"
-                android:scaleType="centerInside"
-                android:src="@drawable/paintpot_yellow" />
+                android:src="@drawable/paintpot_yellow"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1">
 
             <ImageView
+                android:layout_width="15dp"
+                android:layout_height="20dp"
+                android:src="@drawable/ic_selected"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:visibility="@{((int)drawViewModel.selectedColor)==@color/green ? View.VISIBLE : View.GONE}"/>
+            <ImageView
                 android:id="@+id/btn_draw_setColorGreen"
-                android:layout_width="match_parent"
+                android:layout_width="50dp"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
-                android:background="@{((int)drawViewModel.selectedColor)==@color/green ? @drawable/background : @drawable/background_noborder}"
                 android:contentDescription="@string/choose_green"
                 android:onClick="@{() -> drawViewModel.pickColor(@color/green)}"
-                android:padding="5dp"
-                android:scaleType="centerInside"
-                android:src="@drawable/paintpot_green" />
+                android:src="@drawable/paintpot_green"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1">
+
+                <ImageView
+                    android:layout_width="15dp"
+                    android:layout_height="20dp"
+                    android:src="@drawable/ic_selected"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:visibility="@{((int)drawViewModel.selectedColor)==@color/green ? View.VISIBLE : View.GONE}"/>
+
+                <ImageView
+                    android:id="@+id/btn_draw_setCustomColor"
+                    android:layout_width="50dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:adjustViewBounds="true"
+                    android:contentDescription="@string/choose_green"
+                    android:onClick="@{()->drawViewModel.onCustomColorClicked()}"
+                    android:src="@drawable/paintpot_general"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
         </LinearLayout>
 
